# codex-workflow

./: .gitignore  README.md  pyproject.toml
codex_workflow/: __init__.py  autopilot.py  bootstrap.py  cli.py  crewai_blueprint.py  evolution.py  hooks.py  models.py  runner.py  utils.py
templates/.codex-workflow/: README.md  evolution.json  project_profile.json  quality_gates.json  workflow.json
