[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-workflow"
version = "0.1.0"
description = "Reusable Codex-assisted engineering workflow with self-evolution memory"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
crewai = ["crewai>=1.0.0; python_version<'3.14'"]

[project.scripts]
codex-workflow = "codex_workflow.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codex_workflow*"]
